fixing header spacing

--- a/queries.css
+++ b/queries.css
@@ -151,14 +151,6 @@
     grid-template-columns: repeat(4, 1fr);
   }
 
-  .header {
-    padding: 1.5rem;
-  }
-
-  .logo {
-    height: 3.5rem;
-  }
-
   .categories {
     grid-template-columns: repeat(6, 1fr);
   }
